fixed spacing

--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ body{
 }
 
 .chappo_ext{
-	height: 350px;
+	height: 60vh;
 }
 
 .chappo h2{
@@ -385,7 +385,7 @@ footer{
 }
 
 .addd{
-	height: 150px;
+	height: 30vh;
 }
 
 .invest h6{
